# mbs4

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  consolidate_workspace_deps.py  container-entrypoint.sh  docker-compose-template.yml  keycloak.sh  run.sh  runc.sh  watch.sh
.cargo/: mutants.toml
.github/actions/setup-calibre/: action.yml
.github/workflows/: rust.yml
crates/mbs4-app/: Cargo.toml
crates/mbs4-app/src/: auth.rs  error.rs  lib.rs  search.rs  state.rs  user.rs  util.rs  validate.rs
crates/mbs4-app/src/auth/: mod.rs  oidc.rs  rate_limit.rs  token.rs
crates/mbs4-app/src/dal/: user.rs
crates/mbs4-app/src/ebook_format/: batch.rs  convertor.rs  mod.rs  source_pick.rs
crates/mbs4-app/src/events/: mod.rs
crates/mbs4-app/src/rest_api/: author.rs  bookshelf.rs  conversion.rs  conversion_batch.rs  ebook.rs  format.rs  genre.rs  indexing.rs  language.rs  macros.rs  mod.rs  paging.rs  series.rs  source.rs
crates/mbs4-app/src/rest_api/paging/: parsers.rs
crates/mbs4-app/src/store/: download.rs  error.rs  file_store.rs  mod.rs  rest_api.rs
crates/mbs4-auth/: Cargo.toml
crates/mbs4-auth/src/: config.rs  error.rs  lib.rs  oidc.rs  token.rs  web.rs
crates/mbs4-auth/test-data/: config.toml
crates/mbs4-calibre/: Cargo.toml
crates/mbs4-calibre/src/: lang.rs  lib.rs  meta.rs  ooffice.rs
crates/mbs4-cli/: Cargo.toml
crates/mbs4-cli/src/: config.rs  lib.rs  main.rs  run.rs
crates/mbs4-cli/src/commands/: change_password.rs  cleanup.rs  create_user.rs  mod.rs  upload.rs
crates/mbs4-dal/: Cargo.toml
crates/mbs4-dal/src/: author.rs  author_utils.rs  bookshelf.rs  conversion.rs  conversion_batch.rs  ebook.rs  ebook_rating.rs  error.rs  format.rs  genre.rs  language.rs  lib.rs  series.rs  source.rs  user.rs
crates/mbs4-dal/tests/: author.rs  bookshelf.rs  conversion.rs  ebooks.rs  user.rs
crates/mbs4-e2e-tests/: .gitignore  Cargo.toml
crates/mbs4-e2e-tests/src/: lib.rs  rest.rs
crates/mbs4-e2e-tests/tests/: rest-author.rs  rest-language.rs  server-auth.rs  server-health.rs  server-store.rs  server-users.rs
crates/mbs4-e2e-tests/tests/server-tests/: batch_convert.rs  bookshelf.rs  main.rs  observability_metrics.rs  rest_author.rs  rest_ebook.rs  rest_language.rs  server_auth.rs  server_authz.rs  server_health.rs  server_store.rs  server_users.rs  upload_ebook.rs
crates/mbs4-image/: Cargo.toml
crates/mbs4-image/src/: lib.rs
crates/mbs4-macros/: Cargo.toml
crates/mbs4-macros/src/: entity_repo.rs  lib.rs  value_repo.rs
crates/mbs4-macros/tests/: entity-repo.rs  repository.rs  tests.rs
crates/mbs4-search/: .gitignore  Cargo.toml  test.db-shm
crates/mbs4-search/examples/: sql.rs  tnv.rs
crates/mbs4-search/src/: lib.rs  main.rs  sql.rs  tnv.rs
crates/mbs4-server/: Cargo.toml
crates/mbs4-server/src/: config.rs  error.rs  lib.rs  main.rs  observability.rs  run.rs
crates/mbs4-store/: Cargo.toml
crates/mbs4-store/src/: error.rs  file_store.rs  lib.rs
crates/mbs4-types/: Cargo.toml
crates/mbs4-types/src/: app.rs  claim.rs  config.rs  error.rs  general.rs  lib.rs  oidc.rs  utils.rs
crates/mbs4-types/src/utils/: book_dir.py  naming.rs
migrations/: 20250228085759_001-user-table.sql  20250326103114_core-tables.sql  20260603120000_batch-conversion.sql
test-data/: .gitignore  mbs4.db-shm  mbs4.db-wal  oidc-config.toml
test-data/samples/: Armagedony.epub  Dabel.epub  Holmes.epub  Mura.mobi  Pruvodce.doc  oidc-config-sample.toml
