[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Tool for management of ebooks"
license = "MIT/Apache-2.0"


[workspace.dependencies]
axum = { version = "0.8.8", features = ["multipart", "ws", "http2", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = "0.3.22"
time = { version = "0.3", features = ["serde-human-readable", "local-offset"] }
anyhow = "1.0.101"
tower-sessions = { version = "0.14.0" }
url = { version = "2.5.8" }
thiserror = { version = "2.0.18" }
futures = { version = "0.3.31" }
tower-cookies = { version = "0.11.0" }
tower = { version = "0.5.3" }
garde = { version = "0.22.1" }
tempfile = { version = "3.24.0" }
rand = { version = "0.9.2" }
utoipa = { version = "5.4.0" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }
reqwest = "0.12.28"
sha2 = "0.10.9"
clap = { version = "4.5.57", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4"] }
base16ct = { version = "0.2.0" }

# dev-dependencies
tracing-test = { version = "0.2.6" }

[profile.dev.package.sqlx-macros]
opt-level = 3
