[package]
name = "mbs4-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
http = "1.2.0"
mbs4-types = { path = "../mbs4-types" }
mbs4-auth = { path = "../mbs4-auth" }
mbs4-dal = { path = "../mbs4-dal" }
mbs4-search = { path = "../mbs4-search" }
time = "0.3.37"
tower-sessions = "0.14.0"
url = "2.5.4"
serde_json.workspace = true

thiserror = "2.0.11"
futures = "0.3.31"
cookie = "0.18.1"
tower-cookies = "0.11.0"
headers = "0.4.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.2"
bytes = "1.10.1"
sha2 = "0.10.8"
base16ct = "0.2.0"
tokio-util = { version = "0.7.14", features = ["io"] }
new_mime_guess = "4.0.4"
axum-valid = { version = "0.23.0", default-features = false, features = [
    "garde",
    "basic",
    "full_garde",
] }
garde = "0.22.0"
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "preserve_order",
    "time",
], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
paste = "1.0.15"


[features]
openapi = ["utoipa", "utoipa-axum", "mbs4-dal/openapi"]

[dev-dependencies]
rand = "0.9.0"

tempfile = "3.18.0"
