[package]
name = "mbs4-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
http = "1.2.0"
mbs4-types = { path = "../mbs4-types" }
mbs4-auth = { path = "../mbs4-auth" }
mbs4-dal = { path = "../mbs4-dal" }
mbs4-search = { path = "../mbs4-search" }
time = { workspace = true }
tower-sessions = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
cookie = "0.18.1"
tower-cookies = { workspace = true }
headers = "0.4.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = { workspace = true }
bytes = "1.10.1"
sha2 = "0.10.8"
base16ct = "0.2.0"
tokio-util = { version = "0.7.14", features = ["io"] }
new_mime_guess = "4.0.4"
axum-valid = { version = "0.23.0", default-features = false, features = [
    "garde",
    "basic",
    "full_garde",
] }
garde = { workspace = true }
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "preserve_order",
    "time",
], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
paste = "1.0.15"
uuid = { version = "1.17.0", features = ["v4"] }
libc = "0.2.174"
tempfile = { workspace = true }


[features]
openapi = ["utoipa", "utoipa-axum", "mbs4-dal/openapi", "mbs4-search/openapi"]

[dev-dependencies]
rand = "0.9.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

tempfile = "3.18.0"
tokio-util = { version = "0.7.14", features = ["io"] }
