[package]
name = "mbs4-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
tokio.workspace = true
url = "2.5.4"
openidconnect = "4.0.0"
reqwest = "0.12.12"
anyhow.workspace = true
tracing.workspace = true
mbs4-types = { path = "../mbs4-types" }
jsonwebtoken = "9.3.1"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.9.1"

[dev-dependencies]
tracing-test = "0.2.5"
