[package]
name = "mbs4-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
serde = { workspace = true }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tokio = { workspace = true }
url = { workspace = true }
openidconnect = "4.0.1"
config = "0.15.19"
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
mbs4-types = { path = "../mbs4-types" }
sha2 = { workspace = true }
base64 = "0.22.1"
rand = { workspace = true }

[dev-dependencies]
tracing-test = "0.2.6"
