[package]
name = "mbs4-calibre"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
regex = "1.12.3"
tokio.workspace = true
anyhow.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
serde = { workspace = true }
tracing = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }


[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal", "process"] }

[dev-dependencies]
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
