[package]
name = "mbs4-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "mbs4"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
mbs4-types = { path = "../mbs4-types" }
mbs4-store = { path = "../mbs4-store" }
mbs4-calibre = { path = "../mbs4-calibre" }
mbs4-dal = { path = "../mbs4-dal" }
reqwest = { workspace = true, features = [
    "json",
    "cookies",
    "multipart",
    "stream",
] }
serde_json = { workspace = true }
reqwest-eventsource = "0.6.0"
futures = { workspace = true }
