[package]
name = "mbs4-dal"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "time"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror = "2.0.11"
mbs4-types = { path = "../mbs4-types" }
mbs4-macros = { path = "../mbs4-macros" }
garde = { version = "0.22.0", features = ["full"] }
time.workspace = true
tokio.workspace = true
utoipa = { version = "5.4.0", features = ["preserve_order", "time"] }

[dev-dependencies]
tokio.workspace = true
futures = "0.3.31"

[profile.dev.package.sqlx-macros]
opt-level = 3
