[package]
name = "mbs4-dal"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
futures = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mbs4-types = { path = "../mbs4-types" }
mbs4-macros = { path = "../mbs4-macros" }
garde = { workspace = true, features = ["full"] }
time = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true, features = [
    "preserve_order",
    "time",
], optional = true }

[dev-dependencies]

[features]
openapi = ["utoipa"]
