[package]
name = "mbs4-e2e-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
mbs4-server = { path = "../mbs4-server" }
tempfile = "3.18.0"
rand = "0.9.0"
tracing.workspace = true
reqwest = "0.12.12"
mbs4-dal = { path = "../mbs4-dal" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
[dev-dependencies]
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
