[package]
name = "mbs4-e2e-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
mbs4-server = { path = "../mbs4-server" }
mbs4-app = { path = "../mbs4-app" }
mbs4-types = { path = "../mbs4-types", features = ["e2e-tests"] }
mbs4-calibre = { path = "../mbs4-calibre" }
tempfile = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "cookies",
    "multipart",
    "stream",
] }
mbs4-dal = { path = "../mbs4-dal" }
sqlx = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
futures = { workspace = true }
garde = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
base16ct = { workspace = true }

[dev-dependencies]
# tracing-test = { version = "0.2.5", features = [] }
# For detailed logs use this feature
tracing-test = { workspace = true, features = ["no-env-filter"] }
