[package]
name = "mbs4-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dev-dependencies]
garde = { version = "0.22.0", features = ["derive", "serde"] }
serde = { workspace = true, features = ["derive"] }
trybuild = { version = "1.0.49", features = ["diff"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "time"] }
mbs4-dal = { path = "../mbs4-dal" }
tracing.workspace = true
futures = "0.3.31"
time.workspace = true
utoipa = { version = "5.4.0", features = ["time", "preserve_order"] }

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.99"
