[package]
name = "mbs4-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dev-dependencies]
garde = { workspace = true, features = ["derive", "serde"] }
serde = { workspace = true, features = ["derive"] }
trybuild = { version = "1.0.115", features = ["diff"] }
sqlx = { workspace = true }
mbs4-dal = { path = "../mbs4-dal" }
tracing = { workspace = true }
futures = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, features = ["time", "preserve_order"] }

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"

[features]
debug-macros = []
