[package]
name = "mbs4-search"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "time"] }
tracing.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
anyhow.workspace = true
tantivy = "0.24.1"
mbs4-dal = { path = "../mbs4-dal" }
serde.workspace = true
serde_json.workspace = true
futures = "0.3.31"
pin-project-lite = "0.2.13"
utoipa = { version = "5.4.0", features = [
    "time",
    "preserve_order",
], optional = true }

[features]
openapi = ["utoipa"]

[dev-dependencies]
tracing-subscriber = "0.3.19"
