[package]
name = "mbs4-search"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

anyhow = { workspace = true }
mbs4-dal = { path = "../mbs4-dal" }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2.13"
utoipa = { workspace = true, features = [
    "time",
    "preserve_order",
], optional = true }

[features]
openapi = ["utoipa"]

[dev-dependencies]
tracing-subscriber = "0.3.19"
clap = { workspace = true }
