[package]
name = "mbs4-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mbs4"
path = "src/main.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time = "0.3.37"
tokio.workspace = true
tower-sessions = "0.14.0"
tracing-subscriber = "0.3.19"
mbs4-auth = { path = "../mbs4-auth" }
clap = { version = "4.5.30", features = ["derive", "env"] }
anyhow.workspace = true
mbs4-types = { path = "../mbs4-types" }
mbs4-app = { path = "../mbs4-app" }
url = "2.5.4"
sqlx.workspace=true
dirs = "6.0.0"
rand = "0.9.0"
humantime = "2.1.0"
tower-cookies = "0.11.0"
