[package]
name = "mbs4-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mbs4"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-sessions = { workspace = true }
tracing-subscriber = { workspace = true }
mbs4-auth = { path = "../mbs4-auth" }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
mbs4-types = { path = "../mbs4-types" }
mbs4-app = { path = "../mbs4-app" }
mbs4-dal = { path = "../mbs4-dal" }
url = { workspace = true }
rand = { workspace = true }
humantime = "2.1.0"
tower-cookies = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = { workspace = true, features = [
    "axum_extras",
    "preserve_order",
    "time",
], optional = true }
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = [
    "axum",
    "vendored",
], optional = true }

[features]
default = ["openapi"]
openapi = [
    "utoipa",
    "utoipa-swagger-ui",
    "mbs4-dal/openapi",
    "mbs4-app/openapi",
]
