[package]
name = "mbs4-server"
version = "0.1.0"
edition = "2021"
default-run = "mbs4-server"

[[bin]]
name = "mbs4-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-sessions = { workspace = true }
tracing-subscriber = { workspace = true }
mbs4-auth = { path = "../mbs4-auth" }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
mbs4-types = { path = "../mbs4-types" }
mbs4-app = { path = "../mbs4-app" }
mbs4-dal = { path = "../mbs4-dal" }
url = { workspace = true }
rand = { workspace = true }
humantime = "2.3.0"
tower-cookies = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
opentelemetry = { version = "0.29.1", features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-prometheus = { version = "0.29.1", optional = true }
prometheus = { version = "0.14.0", optional = true }
utoipa = { workspace = true, features = [
    "axum_extras",
    "preserve_order",
    "time",
], optional = true }
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = [
    "axum",
    "vendored",
], optional = true }

[features]
default = ["openapi", "observability"]
observability = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-prometheus",
    "prometheus",
]
openapi = [
    "utoipa",
    "utoipa-swagger-ui",
    "mbs4-dal/openapi",
    "mbs4-app/openapi",
]
