[package]
name = "mbs4-store"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
libc = "0.2.174"
tempfile = { workspace = true }
base16ct = { workspace = true, features = ["alloc"] }

[dev-dependencies]
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
rand = { workspace = true }
