[package]
name = "mbs4-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
config = "0.15.8"
garde = { version = "0.22.0", features = ["full"] }
unicode-normalization = "0.1.24"
phf = { version = "0.11.3", features = ["macros"] }

[dev-dependencies]
fake = { version = "4.2.0", features = ["email_address"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"


[features]
e2e-tests = []
