[package]
name = "mbs4-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
garde = { workspace = true, features = ["full"] }
unicode-normalization = "0.1.24"
phf = { version = "0.12", features = ["macros"] }
clap = { workspace = true, features = ["derive", "env"] }
dirs = "6.0.0"

[dev-dependencies]
fake = { version = "4.2.0", features = ["email_address"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"


[features]
e2e-tests = []
