[package]
name = "mbs4-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
garde = { workspace = true, features = ["full"] }
unicode-normalization = "0.1.25"
phf = { version = "0.13", features = ["macros"] }
clap = { workspace = true, features = ["derive", "env"] }
dirs = "6.0.0"

[dev-dependencies]
fake = { version = "4.4.0", features = ["email_address"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"


[features]
e2e-tests = []
